fix: keep UI bridge tests Java 17 compatible